[gd_scene load_steps=9 format=3 uid="uid://bjtuek71jee10"]

[ext_resource type="Script" path="res://Scripts/UI/Menu.gd" id="1_k81jy"]
[ext_resource type="Material" uid="uid://b5riljx6xlo5u" path="res://Shaders/Wiggler.material" id="2_ii5tg"]
[ext_resource type="Texture2D" uid="uid://d4i7q85ca63qy" path="res://Sprites/UI/next.png" id="3_t5tr5"]
[ext_resource type="Script" path="res://Scripts/UI/SceneChangeButton.gd" id="4_kfl0c"]
[ext_resource type="Texture2D" uid="uid://c3brrgat5qpm4" path="res://Sprites/title.png" id="5_dqnvi"]
[ext_resource type="Shader" path="res://Shaders/water.gdshader" id="14_a473p"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g2kl2"]
render_priority = 0
shader = ExtResource("14_a473p")
shader_parameter/OCTAVE = 6
shader_parameter/mulscale = 7.0
shader_parameter/height = 0.6
shader_parameter/tide = 0.1
shader_parameter/foamthickness = 0.05
shader_parameter/timescale = 0.3
shader_parameter/waterdeep = 0.3
shader_parameter/WATER_COL = Color(0, 0.443137, 0.678431, 1)
shader_parameter/WATER2_COL = Color(0, 0.4, 0.615686, 1)
shader_parameter/FOAM_COL = Color(0, 0.529412, 0.807843, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_avcvu"]
lightmap_size_hint = Vector2i(252, 252)
material = SubResource("ShaderMaterial_g2kl2")
uv2_padding = 1.07
size = Vector2(60, 60)

[node name="LevelSelect" type="Node3D"]
script = ExtResource("1_k81jy")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Level1" type="TextureRect" parent="CanvasLayer"]
material = ExtResource("2_ii5tg")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 75.0
offset_right = 75.0
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_t5tr5")
script = ExtResource("4_kfl0c")
to_scene = "res://Scenes/LevelSelect.tscn"
progress_dependent = true
progress_num = 1

[node name="Title" type="TextureRect" parent="CanvasLayer"]
material = ExtResource("2_ii5tg")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -324.0
offset_top = -252.0
offset_right = 176.0
offset_bottom = -68.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.3, 1.3)
texture = ExtResource("5_dqnvi")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_avcvu")

[node name="Camera3D" type="Camera3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 14, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.496823, 0.867852, 0, -0.867852, -0.496823, 5, 5.1723, 10.3439)

[connection signal="gui_input" from="CanvasLayer/Level1" to="CanvasLayer/Level1" method="_on_gui_input"]
[connection signal="mouse_entered" from="CanvasLayer/Level1" to="CanvasLayer/Level1" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Level1" to="CanvasLayer/Level1" method="_on_mouse_exited"]
[connection signal="gui_input" from="CanvasLayer/Title" to="CanvasLayer/Title" method="_on_gui_input"]
[connection signal="mouse_entered" from="CanvasLayer/Title" to="CanvasLayer/Title" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Title" to="CanvasLayer/Title" method="_on_mouse_exited"]
